--- a/html-css-js/css/style.css
+++ b/html-css-js/css/style.css
@@ -4,48 +4,20 @@ body {
 	padding-top: 3.7rem;
 	margin: auto;
 	font-family: 'Oswald', sans-serif;
-
 }
-
-
-
-/*USER FILTER */
-
-.filter_item {
-	width: 100%;
-}
-
-.arrow {
-	justify-content: space-between !important;
-}
-
-.aside_user {
-	padding: 0 1em;
-}
-
-.aside_user div {
-	margin: .25em 0;
-}
-
-input {
-	margin-right: 5px;
-}
-
 
 .container {
 	min-width: 100% !important;
 	max-height: 100% !important;
 }
 
+/* NAVBAR */
 nav {
 	position: fixed;
 	z-index: 2;
 	background-color: #6184D8;
-	/* height: 3.5rem; */
 }
 
-
-/* navbar */
 body.offcanvas-active {
 	overflow: hidden;
 }
@@ -54,315 +26,10 @@ body.offcanvas-active {
 	display: none;
 }
 
-@media (max-width: 992px) {
-	.offcanvas-header {
-		display: block;
-	}
-
-	.navbar-collapse {
-		z-index: 3;
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		width: 33%;
-		padding-right: 1rem;
-		padding-left: 1rem;
-		overflow-y: auto;
-		visibility: hidden;
-		background-color: black;
-		transition: visibility .2s ease-in-out, transform .2s ease-in-out;
-	}
-
-	.right {
-		left: 100%;
-	}
-
-	.left {
-		right: 100%
-	}
-
-	.left.show {
-		visibility: visible;
-		transform: translateX(100%);
-	}
-
-	.right.show {
-		visibility: visible;
-		transform: translateX(-100%);
-	}
-
-	footer {
-		text-align: center;
-	}
-
-	.user_info a {
-		display: inline !important;
-	}
-}
-
-
 #logo {
 	width: 120px;
 	color: #d3a72e;
 }
-
-/* END navbar */
-
-/* presentation */
-
-
-.fake_conv {
-	min-height: 30vh;
-}
-
-
-
-.presentation {
-	padding: 100px 0;
-}
-
-
-
-/* Homepage User */
-
-/* Carousel */
-
-
-
-.tns-outer {
-	text-align: center;
-}
-
-.tns-visually-hidden {
-	position: hidden;
-}
-
-
-figure {
-
-	width: 30%;
-	text-align: center;
-	font-style: italic;
-	font-size: smaller;
-	text-indent: 0;
-	/* border: thin silver solid; */
-	margin: 0.5em;
-	padding: 0.5em;
-	position: relative;
-	top: 0;
-	transition: top ease 0.5s;
-}
-
-figure:hover {
-	top: -10px;
-}
-
-img.scaled {
-	width: 100%;
-	width: 200px;
-	height: 200px;
-	object-fit: cover;
-
-}
-
-/* 
-img.users_pic {
-	width: 200px;
-	height: 200px;
-}
-
-img.projects_pic {
-	width: 200px;
-	height: 200px;
-} */
-
-
-img.img-rounded {
-
-	width: 80%;
-
-	border-radius: 50%;
-}
-
-
-
-img.scaled {
-	cursor: move;
-	/* fallback if grab cursor is unsupported */
-	cursor: -webkit-grab;
-	/* Chrome 1-21, Safari 4+ */
-	cursor: -moz-grab;
-	/* Firefox 1.5-26 */
-	cursor: grab;
-	border: white 2px solid;
-	border-bottom-width: 0;
-	border-radius: 3px;
-}
-
-
-img.scaled:active {
-	cursor: -webkit-grabbing;
-	cursor: -moz-grabbing;
-	cursor: grabbing;
-}
-
-img.img-rounded {
-	border-radius: 50%;
-}
-
-
-
-/* Caption User Carousel */
-
-
-
-figcaption {
-	margin-top: 30px;
-	border: 2px solid white;
-	background-color: aliceblue;
-	width: 300px;
-	margin: auto;
-	background-color: #FAA300;
-	border-radius: 3px;
-}
-
-figcaption h6 {
-	margin-top: 10px;
-}
-
-#users>.tns-item,
-#projects>.tns-item {
-
-	margin-left: 0;
-	margin-right: 0;
-	padding-left: 0;
-	padding-right: 0px !important;
-}
-
-
-/* just a div for the top of rtjhet user list*/
-
-.top_div {
-	height: 8em;
-	width: 100%;
-}
-
-
-
-
-/*card user*/
-
-.card-text {
-	color: black !important;
-}
-
-.user_img {
-	height: 130px;
-	width: 130px;
-}
-
-.user_list .card {
-	background-color: #EFF7F6;
-	border-radius: 1rem;
-
-}
-
-.user_list .card:hover {
-	top: -10px;
-}
-
-
-.filter_user {
-	overflow-y: hidden;
-	position: fixed;
-	left: 1rem;
-}
-
-.user_container {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-}
-
-.user_list {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	padding-left: 18%;
-	flex-wrap: wrap;
-	justify-content: center;
-}
-
-@media (min-width: 992px) {
-	.btn {
-		display: none;
-	}
-
-	#collapseUserList {
-		display: block;
-	}
-
-	#collapseProjectList {
-		display: block;
-	}
-}
-
-@media (max-width: 992px) {
-	/*NAVBAR RESPONSIVE */
-
-	.navbar-collapse {
-		padding-left: 0;
-		padding-right: 0;
-	}
-
-	.nav-link {
-		color: white !important;
-		font-size: small;
-	}
-
-	.nav_right,
-	.nav_left {
-		padding-top: 2rem;
-		display: block;
-		text-align: right;
-	}
-
-	.nav_left {
-		text-align: left;
-	}
-
-	.filter_user {
-		position: static;
-		margin-bottom: 1em;
-	}
-
-	.filter_user button {
-		display: block;
-		margin: auto;
-	}
-
-	.filter_user ul {
-		padding-top: 1rem;
-		display: block;
-		float: left;
-	}
-
-	.container {
-		position: static;
-		flex-direction: column !important;
-	}
-
-	.user_list {
-		order: 2;
-		padding: 0%;
-		/* margin-left: 1rem; */
-	}
-
-	.card {
-		margin: 1.5rem auto !important;
-	}
-}
-
 
 nav {
 	width: 100%;
@@ -450,11 +117,38 @@ nav.fill ul li a:hover:after {
 	opacity: 1;
 }
 
+.show {
+	transform: translate(100deg);
+}
+/* END navbar */
 
 
+/* FILTER */
+.filter {
+	padding: 0 1em;
+	overflow-y: hidden;
+	position: fixed;
+	left: 1rem;
+}
 
+.filter_item {
+	width: 100%;
+}
 
-/* TEST */
+.filter div {
+	margin: .25em 0;
+}
+
+.arrow {
+	justify-content: space-between !important;
+}
+
+/* Checkbox user filter */
+input[type=checkbox] {
+	margin-right: 5px;
+}
+
+/* moving filter arrow */
 .fa-arrow-right {
 	transition: transform 0.4s linear;
 }
@@ -463,29 +157,147 @@ nav.fill ul li a:hover:after {
 	transform: rotate(90deg);
 }
 
-
-.turnDown {
+.arrow_down {
 	transform: rotate(90deg);
 }
 
-
-.turnUp {
+.arrow_right {
 	transform: rotate(0deg);
 }
 
 .filter_item .collapse {
 	transition: transform 0.4s linear;
 }
+/* END FILTER */
 
-.show {
-	transform: translate(100deg);
+/* Carousel */
+.tns-outer {
+	text-align: center;
+}
+
+.tns-visually-hidden {
+	position: hidden;
+}
+
+figure {
+	width: 30%;
+	text-align: center;
+	font-style: italic;
+	font-size: smaller;
+	text-indent: 0;
+	margin: 0.5em;
+	padding: 0.5em;
+	position: relative;
+	top: 0;
+	transition: top ease 0.5s;
+}
+
+figure:hover {
+	top: -10px;
+}
+
+img.scaled {
+	width: 100%;
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+}
+
+img.img-rounded {
+
+	width: 80%;
+	height:80%;
+	border-radius: 50%;
+}
+
+img.scaled {
+	cursor: move;
+	/* fallback if grab cursor is unsupported */
+	cursor: -webkit-grab;
+	/* Chrome 1-21, Safari 4+ */
+	cursor: -moz-grab;
+	/* Firefox 1.5-26 */
+	cursor: grab;
+	border: white 2px solid;
+	border-bottom-width: 0;
+	border-radius: 3px;
+}
+
+img.scaled:active {
+	cursor: -webkit-grabbing;
+	cursor: -moz-grabbing;
+	cursor: grabbing;
+}
+
+img.img-rounded {
+	border-radius: 50%;
+}
+
+/* Caption User Carousel */
+figcaption {
+	margin-top: 30px;
+	border: 2px solid white;
+	background-color: aliceblue;
+	width: 300px;
+	margin: auto;
+	background-color: #FAA300;
+	border-radius: 3px;
+}
+
+figcaption h6 {
+	margin-top: 10px;
+}
+
+#users>.tns-item,
+#projects>.tns-item {
+	margin-left: 0;
+	margin-right: 0;
+	padding-left: 0;
+	padding-right: 0px !important;
 }
 
 
+/* just a div for the top of user list*/
+.top_div {
+	height: 8em;
+	width: 100%;
+}
 
+/*card user*/
+.card-text {
+	color: black !important;
+}
+
+.user_img {
+	height: 130px;
+	width: 130px;
+}
+
+.user_list .card {
+	background-color: #EFF7F6;
+	border-radius: 1rem;
+}
+
+.user_container {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+.user_list {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	padding-left: 18%;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.user_list .card:hover {
+	top: -10px;
+}
 
 /* User */
-
 .profil {
 	min-width: 80%;
 	width: 80%;
@@ -516,6 +328,12 @@ nav.fill ul li a:hover:after {
 	padding-top: 2em;
 }
 
+.user_avatar_container {
+	position: relative;
+	height: auto;
+	justify-content: center;
+}
+
 .user_avatar {
 
 	width: 50%;
@@ -523,14 +341,7 @@ nav.fill ul li a:hover:after {
 	border-radius: 25% 15% 25% 25%;
 }
 
-.position_div {
-	position: relative;
-	height: auto;
-	justify-content: center;
-}
-
-
-.position_available {
+.user_status {
 	position: absolute;
 	left: 70%;
 	top: -5px;
@@ -542,26 +353,15 @@ nav.fill ul li a:hover:after {
 
 }
 
-.position_available.dispo {
+.user_status.dispo {
 	background-color: rgb(33, 185, 84);
 }
 
-.position_available.indispo {
+.user_status.indispo {
 	background-color: rgb(238, 11, 11);
 }
 
-
-@media(max-width: 992px) {
-	.user_avatar {
-		width: 40%;
-	}
-
-	.position_available {
-		left: 65%;
-	}
-}
-
-.contact_style{
+.action_button{
 	
 	display: inline-block;
 	width: 200px;
@@ -570,12 +370,10 @@ nav.fill ul li a:hover:after {
 	text-align: center;
 	outline: none;
 	text-decoration: none;
-	color: #5533FF;
-
-  
+	color: #5533FF;  
 }
 
-.contact_style {
+.action_button {
 display: inline-block;
 width: 70%;
 padding: 8px 2px;
@@ -589,37 +387,21 @@ transition: background-color 0.2s ease-out,
 			color 0.2s ease-out;
 }
 
-.user_info a {
+.user_interaction a {
 color: #5533FF;
 font-weight: bold;
 text-transform: uppercase;
 text-decoration: none;
 }
-.contact_style:hover,
-.contact_style:active {
+.action_button:hover,
+.action_button:active {
 background-color: #5533FF;
 color: white;
 transition: background-color 0.3s ease-in,
 			color 0.3s ease-in;
 }
 
-@media(max-width: 992px){
-.contact_style{
-	width: 100%;
-}
-.contact_style a{
-	font-size: 12px
-}
-}
-
-.item_profil {
-	padding: 0px !important;
-
-}
-
-
 .baloon {
-
 	display: block;
 	border-radius: 50%;
 	height: 4.5em;
@@ -627,7 +409,6 @@ transition: background-color 0.3s ease-in,
 	position: relative;
 	background: radial-gradient(circle at 50% 120%, #81e8f6, #76deef 10%, #055194 80%, #062745 100%);
 	font-size: 10px;
-
 }
 
 .baloon:before {
@@ -643,8 +424,6 @@ transition: background-color 0.3s ease-in,
 	z-index: 2;
 }
 
-
-
 .baloon_big {
 	height: 5em;
 	width: 5em;
@@ -653,7 +432,7 @@ transition: background-color 0.3s ease-in,
 	
 }
 
-.user_description{
+.user_about_me{
 	width: 70%;
 	margin-left : 2rem;
 	padding: 20px;
@@ -677,79 +456,50 @@ transition: background-color 0.3s ease-in,
 	border: 2px solid whitesmoke
 }
 
-.user_tools li{
-	display: flex;
-	flex-wrap: wrap;
-	margin:auto;
-}
-
-
-.user_tools li:hover{
-background-image: blue;
-}
-
-
-.user_project{
-	margin-top: 2em;
-	padding: 20px;
-	width: 100%;
-}
 .svg--icon {
 	width: 2rem;
 	margin: auto;
 	transition:0.2s;
 }
 
-.svg--icon:hover {
-	transform:scale(1.2);
-	transition:0.5s;
-}
-
-.svg--icon:hover path{
-	fill: rgb(163, 255, 0);
-}
 .svg--icon--small {
-	width: 3.5rem;
+	width: 4rem;
+	height: 3.5rem;
 	margin: auto;
 }
 
-@media (min-width:1200px) {
-	.svg--icon {
-		width: 3rem;
-	}
-	.svg--icon--small {
-		width: 4rem;
-		margin: auto;
-	}
+
+.user_project h3{
+	text-align:center;
 }
 
-@media (max-width:992px) {
-	.svg--icon {
-		width: 1.5rem;
-		
-	}
+.user_project{
+	margin-top: 2em;
+	padding: 20px;
+	width: 100%;
 }
-
 
 .container_project{
 	padding-top: 1rem;
 	width: 100%;
 }
 
-.screen_project{
+.detail_project{
 	position: relative;
-	width:600px;
+	margin-bottom: 1rem;
+	width:100%;
 	height: 300px;
 	overflow: hidden;
 	border: black 2px solid;
     border-radius: 10px;
 	box-shadow: 10px 10px 30px #003f8e;
+	padding: 0;
 }
 
-
-.screen_project img{
-	width: 600px;
-	height: 300px;
+.detail_project img{
+	width: 100%;
+	height: 100%;
+	padding: 0;
 }
 
 #user_projects > .tns-item {
@@ -760,37 +510,35 @@ background-image: blue;
 	display: flex;
 }
 
-.test_box{
+.project_info_content{
 	flex-direction: column;
-	margin:auto;
-	padding-top: 15%;
-}
-.show_project_info{
-	background :rgba(140, 140, 207, 0.5);
-	width :100%;
-	height:100%;
-    position:absolute;
-    bottom: 0;
-	left: 0; 
-	animation-duration: 1s;
-	animation-name: mouseover;
-	/* animation-direction: alternate; */
+	margin: auto;
+	padding-top: 25%;
 }
 
-.show_project_info_mobile{
-	background :rgba(140, 140, 207, 0.5);
-	width :100%;
+.project_info_content h3, .project_info_content p, .project_info_content a {
+	font-weight: 900;
+} 
+
+.show_project_info{
+	background :rgba(0, 0, 0, 0.5);
+	width:100%;
 	height:100%;
-    position:relative;
-    bottom: 0;
-	left: 0; 
+    position:absolute;
+	bottom: 0;
+	left: 0;
+	text-shadow: black 3px 3px 3px;
+	text-align: center;
+	animation-duration: 1s;
+	animation-name: mouseover;
 }
+
 .project_info_hide {
 	animation-duration: 5s;
 	animation-name: mouseout;
 } 
 
-
+/* ANIMATION */
 @keyframes mouseover{
 	from{
 		opacity: 0;
@@ -804,7 +552,6 @@ background-image: blue;
 	}
 }
 
-
  @keyframes mouseout{
 	from{
 		opacity: 1;
@@ -817,28 +564,167 @@ background-image: blue;
 	}
 }
  
+/*MEDIA QUERIES */
+@media (min-width:500px) {
+	.svg--icon {
+		width: 3rem;
+	}
+	.svg--icon--small {
+		width: 4rem;
+		margin: auto;
+	}
+}
 
-
-
-
-@media(max-width: 992px){
-
-	.user_description, .user_project, .user_tools, .test_project_div{
-		width: 95%;
-		margin:  1rem auto !important;
-		padding: 15px;
+@media (min-width: 992px) {
+	.btn {
+		display: none;
 	}
 
+	#collapseUserList {
+		display: block;
+	}
 
-	.screen_project, .screen_project img{
-		height: 100%;
-		width:100%;
-		/* height: auto;
-		padding: 0 !important; */
+	#collapseProjectList {
+		display: block;
+	}
+}
+
+@media(max-width: 992px){
+	.container {
+		position: static;
+		flex-direction: column !important;
+	}
+
+	.offcanvas-header {
+		display: block;
+	}
+	
+	/*NAVBAR RESPONSIVE */
+	.navbar-collapse {
+		z-index: 3;
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		width: 33%;
+		padding-left: 0;
+		padding-right: 0;
+		overflow-y: auto;
+		visibility: hidden;
+		background-color: black;
+		transition: visibility .2s ease-in-out, transform .2s ease-in-out;
+	}
+
+	.nav-link {
+		color: white !important;
+		font-size: small;
+	}
+
+	.nav_right,
+	.nav_left {
+		padding-top: 2rem;
+		display: block;
+		text-align: right;
+	}
+
+	.nav_left {
+		text-align: left;
+	}
+	.right {
+		left: 100%;
+	}
+
+	.left {
+		right: 100%
+	}
+
+	.left.show {
+		visibility: visible;
+		transform: translateX(100%);
+	}
+
+	.right.show {
+		visibility: visible;
+		transform: translateX(-100%);
+	}
+
+	footer {
+		text-align: center;
+	}
+
+	.user_interaction a {
+		display: inline !important;
+	}
+
+	.filter {
+		position: static;
+		margin-bottom: 1em;
+	}
+
+	.filter button {
+		display: block;
+		margin: auto;
+	}
+
+	.filter ul {
+		padding-top: 1rem;
+		display: block;
+		float: left;
+	}
+
+	.user_list {
+		order: 2;
+		padding: 0%;
+	}
+
+	.card {
+		margin: 1.5rem auto !important;
+	}
+
+	.action_button{
+		width: 100%;
+	}
+	.action_button a{
+		font-size: 12px
+	}
+
+	.user_avatar {
+		width: 40%;
+	}
+
+	.user_status {
+		left: 65%;
+	}
+
+	.user_about_me, .user_project, .user_tools, .test_project_div{
+		width: 100%;
+		margin:  1rem auto !important;
+		padding: 0;
+	}
+
+	.detail_project, .detail_project img{	
+		padding: 0;
+		max-width:100%;
+		max-height: auto; 
 	}
 
 	 .show_project_info{
 		display:none;
 	}
-
 }
+
+@media (max-width : 1200px) {
+		
+	.project_info_hide {
+		background :rgba(0, 0, 0, 0.1);
+		width:100%;
+		height:100%;
+		position:absolute;
+		bottom: 0;
+		left: 0;
+		animation-duration: none;
+		animation-name: none;
+		text-shadow: black 3px 3px 3px;
+		text-align: center;
+	}
+}
+
